Whats a name in (#4)
* Added WhatsInAName

* Updates and warnings

---------

Co-authored-by: Chris Faulkner <chris.faulkner@digital.homeoffice.gov.uk>