@@ -1,10 +1,9 @@
 /**
- * 
+ *
  */
 package org.lucidant;
 
 import java.util.Arrays;
-import java.util.stream.Collectors;
 
 /**
  * @author chrisfaulkner
@@ -13,14 +12,14 @@ import java.util.stream.Collectors;
 public class AlternatingCase {
 
 	public String toAlternativeString(final String input) {
-		final StringBuffer alternating = new StringBuffer(input.length());
-		for (String entry : Arrays.stream(input.split("")).collect(Collectors.toList()))
+		final StringBuilder alternating = new StringBuilder(input.length());
+		for (String entry : Arrays.stream(input.split("")).toList())
 		{
 			alternating.append(isLowerCase(entry.charAt(0)) ? entry.toUpperCase() : entry.toLowerCase());
 		}
 		return alternating.toString();
 	}
-	
+
 	private  boolean isLowerCase(char ch) {
 	    return ch >= 'a' && ch <= 'z';
 	}
